# launchlook

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements-ai.txt  requirements-automation.txt  requirements-ui.txt  requirements.txt  vercel.json
api/: e2e-auth.py  free-audit.py  requirements.txt  stripe-webhook.py  tally-webhook.py  verify.py
customers/: example-jane-sparkle.yaml  example-pro-package.yaml  example-webflow.yaml
data/: customers.example.json  milestones.json
docs/: 00-START-HERE.md  01-product-spec.md  02-strategy-and-context.md  03-build-queue.md  04-content-and-copy.md  05-technical-architecture.md  06-findings-library.md  07-launchlook-go-live.md  08-launchlook-security.md  AGENT-ACTION-LOG-2026-05-26.md  AI-AUDIT-PIPELINE.md  AI-COST-MONITORING.md  AUTOMATION-PIPELINE.md  AUTOMATION-SETUP.md  BESTPRACTICES-EXTRACTION-2026-05-26.md  BUSINESS-REVIEW-2026-05-27.md  COMPETITIVE-INTEL.md  CONFIDENCE-CHECK-WORKFLOW.md  CONSISTENCY-AUDIT-REPORT.md  CROSS-PROJECT-REUSE-2026-05-25.md  CUSTOMER-10-RUNBOOK.md  CUSTOMER-TRACKING.md  DEAD-TOOL-VACUUM-RESEARCH.md  DELIVERY-PIPELINE.md  E2E-CHECKLIST.md  FREE-AUDIT-WORKFLOW.md  GITHUB-INTEGRATION.md  HANDOFF-REPORT-WORKFLOW.md  LESSONS-LEARNED.md  MANUAL-APPROVAL-2026-05-26.md  MANUAL-REVIEW-WORKFLOW.md  MANUAL-TASKS-PRICE-BUMP.md  OUTREACH-PLAYBOOK.md  PLATFORM-CHEAT-SHEET.md  PRODUCT-DECISIONS.md  README.md  REFACTOR-NOTES.md  ROB-REMAINING-TODO.md  SHARE-AND-REVIEWS.md  SHAREABLE-REPORT-WORKFLOW.md  (+14 more)
findings_library/: README.md  findings.csv  findings.json  (+1 more)
landing/: README.md  (+30 more)
(+175 files in other folders)
